@@ -1,4 +1,4 @@
 java --enable-native-access=ALL-UNNAMED \
-   --add-modules jdk.incubator.foreign \
+   --enable-preview --source=19 \
    -Djava.library.path=/usr/lib SqliteMain.java
 
