@@ -1,3 +1,5 @@
 
-java --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign PanamaTime.java
+java --enable-native-access=ALL-UNNAMED \
+    --enable-preview --source=19 \
+    PanamaTime.java
 
